# GameOfLife

./: CMakeLists.txt
include/: GLScene.h  Life.cuh  LifeCuda.cuh  LifeCuda.h
src/: CMakeLists.txt  GLScene.cpp  Life.cu  LifeCuda.cpp  LifeCuda.cu
temp/: test  test.cu
